[tool.poetry]
name = "poseidon-python"
version = "2.0.1"
description = "海神波塞冬，本工具库对常用的链上交互操作进行了模块化抽象与简洁式封装，让开发者能够轻松快速地与主流区块链网络进行交互。目前支持任意 EVM 链。"
keywords = ["blockchain", "web3", "ethereum", "evm", "tooling"]
authors = ["B1ue1nWh1te <themagicdeepsea@gmail.com>"]
repository = "https://github.com/B1ue1nWh1te/Poseidon"
documentation = "https://poseidon.seaeye.cn/"
packages = [{ include = "poseidon" }]
include = ["poseidon/py.typed"]
license = "GPL-3.0"
readme = "README.md"
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.7.2"
web3 = "^6.20.4"
py-solc-x = "^2.0.3"
pyevmasm = "^0.2.3"
starkbank-ecdsa = "^2.2.0"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
